--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepare": "husky install",
     "lint": "npx eslint **/*.js",
     "lint:fix": "npx eslint **/*.js --fix",
-    "format": "npx prettier **/* -w --ignore-unknown"
+    "format": "npx prettier **/* -w --ignore-unknown",
+    "seed":"node seeds/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
